--- a/crimac_unet/pipeline_config.yaml
+++ b/crimac_unet/pipeline_config.yaml
@@ -27,9 +27,12 @@ log_step: 1000
 # Number of batches to wait before updating learning rate (default: 1000)
 lr_step: 1000
 # Number of training batches (default: 10000)
-iterations: 10000
+iterations: 500
 # Partitioning of training data (Options: random, selected surveys, single survey, all surveys - default: 'all surveys')
-partition: 'selected_surveys'
+partition: 'selected surveys'
+# If partition is selected_surveys, used this partition during training
+train_surveys: [2011, 2012, 2013, 2014, 2015, 2016]
+val_surveys: [2017]
 # Whether to use save the trained model
 save_model_params: True
 
@@ -44,8 +47,8 @@ selected_surveys: ['S2019847']
 # List with strings referring to colors
 colors_list: []
 # Whether to save the labels
-save_labels: False
+save_labels: True
 # Whether the labels are available
-labels_available: False
+labels_available: True
 # Whether to resume writing zarr predictions for a survey
 resume_writing: False
