--- a/crimac_unet/pipeline_config.yaml
+++ b/crimac_unet/pipeline_config.yaml
@@ -44,7 +44,7 @@ model_names: []
 # Partitioning of the data for the inference (Options: selected surveys, single survey, all surveys - default: 'all surveys')
 partition_predict: 'all surveys'
 # List with the names of the selected survey
-selected_surveys: []
+selected_surveys: ['S2019847_0511']
 # List with strings referring to colors
 colors_list: ['blue']
 # Whether to save the labels
